1. Feature: the sidebar can auto scroll when the toc out of the screen 2. Fix: When the picture is loaded, the picture appears black frame

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -351,3 +351,8 @@ table
   position: fixed
   z-index: -1
   pointer-events: none
+
+
+// 去掉加載黑框
+img[src=""],img:not([src])
+  opacity: 0
